<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".BigBookAPIActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/idETCodAPI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/optiune"
            android:inputType="text" />

        <Button
            android:id="@+id/idBtnCodAPI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnCautaID" />

        <TextView
            android:id="@+id/idTVCarteAPI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Carte_Autori"
            android:textSize="25dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>